# excel-lead-enrichment

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Caddyfile  Dockerfile  LICENSE  README.md  docker-compose.override.yml  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  run_api.py
.claude/: settings.local.json
.planning/: MILESTONE-AUDIT.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
alembic/: env.py
alembic/versions/: 001_initial_tables.py  003_add_enrichment_fields.py  004_add_output_file_path.py  d0e48f167723_add_jobs_and_job_rows_tables.py
app/: celery_app.py  config.py  database.py  deps.py  main.py  seed.py
app/admin/: models.py  routes.py  schemas.py  service.py
app/auth/: models.py  routes.py  schemas.py  service.py
app/contacts/: models.py
app/enrichment/: apollo_client.py  routes.py  schemas.py  service.py  tasks.py
app/health/: routes.py
app/jobs/: detection.py  models.py  output.py  routes.py  schemas.py  service.py
app/models/: __init__.py
deploy/: lead-enrichment-api.service
docs/: power-automate-setup.md
scripts/: dev-entrypoint.sh
src/lead_enrichment/: __init__.py  __main__.py  config.py  models.py  orchestrator.py
src/lead_enrichment/api/: __init__.py  (+4 more)
tests/: conftest.py  test_health.py
tests/admin/: test_config.py  test_users.py
tests/auth/: test_login.py  test_refresh.py  test_revocation.py
tests/enrichment/: test_apollo_client.py  test_service.py  test_tasks.py  test_webhook.py
tests/jobs/: test_confirm.py  test_detection.py  test_download.py  test_list.py  test_mappings.py  test_output.py  test_stats.py  test_status.py  test_upload.py
(+53 files in other folders)
