[project]
name = "leadenrich"
version = "1.0.0"
description = "Apollo-Powered Contact Enrichment Platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]==0.44.0",
    "sqlalchemy==2.0.49",
    "asyncpg==0.31.0",
    "alembic==1.18.4",
    "celery==5.6.3",
    "redis==7.4.0",
    "pydantic-settings==2.13.1",
    "pyjwt==2.12.1",
    "pwdlib[bcrypt]==0.3.0",
    "python-multipart==0.0.24",
    "httpx==0.28.1",
    "tenacity==9.1.4",
    "flower==2.0.1",
    "cryptography>=44.0",
    "openpyxl==3.1.5",
    "pandas==2.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio==1.3.0",
    "ruff==0.15.9",
    "pre-commit==4.5.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
